--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <!--以下是产品菜单-->
         <th><select name="pageselect" onchange="self.location.href=options[selectedIndex].value" 
                     style='font-size:40px;text-align:center;background:olive;color:white;border:none'>
-              <option value='https://oilfieldtools.github.io/overshot'>Over Shot</option>
+              <option value='https://oilfieldtools.github.io/oilfieldfishingmagnet'>Fishing Magnet</option>
               <option value='https://oilfieldtools.github.io/drillpipe'>Drill Pipe</option>
-              <option value='https://oilfieldtools.github.io/spear'>Spear</option>
+              <option value='https://oilfieldtools.github.io/junkmill'>Junk Mill</option>
               <option value='https://oilfieldtools.github.io/cuttingtools'>Cutting Tools</option>
               <option value ='https://oilfieldtools.github.io/fishingtools'>Fishing Tools</option>
           </select></th>
@@ -50,27 +50,25 @@
    <div align="center">
       <a href="https://oilfieldtools.github.io/torquering"><img src="./banner.png" width="1860" height="465" 
          alt="over shot|coupling|joint|oildield equipment|rig|drilling|oil|petroleum"></a><!--横幅-->
-      <a href="https://oilfieldtools.github.io/torquering"><img src="./os1.png" width="1500" height="2083" 
+      <a href="https://oilfieldtools.github.io/torquering"><img src="./fm1.png" width="1500" height="2000" 
          alt="over shot|coupling|joint|oildield equipment|rig|drilling|oil|petroleum"></a><!--os1-->
-      <a href=https://oilfieldtools.github.io/cableprotector/><img src="./os2.png" width="1500" height="2083" 
+      <a href=https://oilfieldtools.github.io/cableprotector/><img src="./fm2.png" width="1500" height="2027" 
          alt="over shots specifications|oilfield equipment|couplings|sucker-rod|petroleum|drilling|rig"></a> <!--os2-->
-      <a href=https://oilfieldtools.github.io/cableprotector/><img src="./os3.png" width="1500" height="2027" 
+      <a href=https://oilfieldtools.github.io/cableprotector/><img src="./fm3.png" width="1500" height="2083" 
          alt="over shot details|coupling|joint|petroleum|sucker-rod|polished rod|oil|drilling|rig "></a> 
-      <a href=https://oilfieldtools.github.io/cableprotector/><img src="./os4.png" width="1500" height="2083" 
+      <a href=https://oilfieldtools.github.io/cableprotector/><img src="./fm4.png" width="1500" height="938" 
          alt="oilfield equipment"></a>
-      <a href=https://oilfieldtools.github.io/cableprotector/><img src="./os5.png" width="1500" height="2027" 
+      <a href=https://oilfieldtools.github.io/cableprotector/><img src="./fm5.png" width="1500" height="843" 
          alt="oilfield equipment|petroleum|oil|sucker-rod"></a>
-      <a href=https://oilfieldtools.github.io/cableprotector/><img src="./os6.png" width="1500" height="2027" 
+      <a href=https://oilfieldtools.github.io/cableprotector/><img src="./fm6.png" width="1500" height="1128" 
          alt="oilfield equipment|drilling|rig|over shot"></a>
-         <a href=https://oilfieldtools.github.io/cableprotector/><img src="./os7.png" width="1500" height="777" 
+         <a href=https://oilfieldtools.github.io/cableprotector/><img src="./fm7.png" width="1500" height="843" 
          alt="oilfield equipment|drilling|rig|over shot"></a>
-          <a href=https://oilfieldtools.github.io/cableprotector/><img src="./os8.png" width="1500" height="1271" 
+          <a href=https://oilfieldtools.github.io/cableprotector/><img src="./fm8.png" width="1500" height="938" 
          alt="oilfield equipment|drilling|rig|over shot"></a>
-          <a href=https://oilfieldtools.github.io/cableprotector/><img src="./os9.png" width="1500" height="1111" 
+          <a href=https://oilfieldtools.github.io/cableprotector/><img src="./fm9.png" width="1500" height="1128" 
          alt="oilfield equipment|drilling|rig|over shot"></a>
-          <a href=https://oilfieldtools.github.io/cableprotector/><img src="./os10.png" width="1500" height="1398" 
-         alt="oilfield equipment|drilling|rig|over shot"></a>
-          <a href=https://oilfieldtools.github.io/cableprotector/><img src="./os11.png" width="1500" height="1807" 
+          <a href=https://oilfieldtools.github.io/cableprotector/><img src="./fm10.png" width="1500" height="1071" 
          alt="oilfield equipment|drilling|rig|over shot"></a>
    </div>
       <!--以上是正文-->
