--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     style='font-size:40px;text-align:center;background:springgreen;color:white;border:none'>
               <option value='https://oilfieldtools.github.io/oilfieldfishingmagnet'>Fishing Magnet</option>
               <option value='https://oilfieldtools.github.io/drillpipe'>Drill Pipe</option>
+              <option value='https://oilfieldtools.github.io/torquering'>Drill Pipe</option>
               <option value='https://oilfieldtools.github.io/junkmill'>Junk Mill</option>
               <option value='https://oilfieldtools.github.io/cuttingtools'>Cutting Tools</option>
               <option value ='https://oilfieldtools.github.io/fishingtools'>Fishing Tools</option>
